Fix awkward centering on mobile.

--- a/app.css
+++ b/app.css
@@ -102,9 +102,6 @@ div[contenteditable] {
 }
 
 header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .title {
@@ -114,8 +111,7 @@ header {
 .view-nav {
   margin-top: 1em;
   margin-bottom: 1em;
-  display: flex;
-  align-items: center;
+  text-align: center;
 }
 
 .view-button {
@@ -268,6 +264,14 @@ a {
 }
 
 @media all and (max-width: 480px) {
+  .title {
+    font-size: 1em;
+  }
+
+  .view-nav {
+    font-size: 0.8em;
+  }
+
   .details-box {
     width: 80%;
     max-width: 200px;
